pkl-core/src/test/files/LanguageSnippetTests/input/errors/undefinedProperty7.pkl
// we don't expect a path to be shown in the error message, because the renderer's traverser cannot
// tell if the thrown error came from reading 

class Person {
  name: String
}

res1 {
  [new Person {}] = 1
}
